# FieldOpt-WellIndexCalculator

./: CMakeLists.txt  README.md  ResInsight.cmake  dllmain.cpp  dllmain.hpp  intersected_cell.cpp  intersected_cell.h  main.cpp  main.hpp  resinxx.cmake  wellindexcalculator.cpp  wellindexcalculator.h  wicalc.cpp  wicalc.h  wicalc_rins.cpp  wicalc_rins.h  wicalc_rinx.cpp  wicalc_rinx.h  wicalc_rixx.cpp  wicalc_rixx.h
resinsight/ApplicationCode/Application/: RiaApplication.cpp  RiaApplication.h  RiaDefines.cpp  RiaDefines.h  RiaPorosityModel.cpp  RiaPorosityModel.h  RiaPreferences.cpp
resinsight/ApplicationCode/FileInterface/: RifEclipseInputFileTools.cpp  RifEclipseInputFileTools.h  RifEclipseOutputFileTools.cpp  RifEclipseOutputFileTools.h  RifEclipseRestartDataAccess.cpp  RifEclipseRestartDataAccess.h  RifEclipseRestartFilesetAccess.cpp  RifEclipseRestartFilesetAccess.h  RifEclipseUnifiedRestartFileAccess.cpp  RifEclipseUnifiedRestartFileAccess.h  RifReaderEclipseOutput.cpp  RifReaderEclipseOutput.h  RifReaderInterface.cpp  RifReaderInterface.h  RifReaderSettings.cpp  RifReaderSettings.h
resinsight/ApplicationCode/ProjectDataModel/: RimEclipseCase.cpp  RimEclipseCase.h  RimEclipseResultCase.cpp  RimEclipseResultCase.h  RimWellPath.cpp  RimWellPath.h
resinsight/ApplicationCode/ReservoirDataModel/: RigActiveCellInfo.cpp  RigActiveCellInfo.h  RigCaseCellResultsData.cpp  RigCaseCellResultsData.h  RigCell.cpp  RigCell.h  RigCellGeometryTools.cpp  RigCellGeometryTools.h  RigCompletionData.cpp  RigEclipseCaseData.cpp  RigEclipseCaseData.h  RigEclipseResultInfo.cpp  RigEclipseResultInfo.h  RigEclipseWellLogExtractor.cpp  RigEclipseWellLogExtractor.h  RigFault.cpp  RigFault.h  RigGridBase.cpp  RigGridBase.h  RigHexIntersectionTools.cpp  RigHexIntersectionTools.h  RigMainGrid.cpp  RigMainGrid.h  RigNNCData.cpp  RigNNCData.h  RigSimWellData.cpp  RigSimWellData.h  RigSimulationWellCenterLineCalculator.cpp  RigSimulationWellCenterLineCalculator.h  RigSimulationWellCoordsAndMD.cpp  RigSimulationWellCoordsAndMD.h  RigWellLogExtractionTools.h  RigWellLogExtractor.cpp  RigWellLogExtractor.h  RigWellPath.cpp  RigWellPath.h  RigWellPathIntersectionTools.cpp  RigWellPathIntersectionTools.h  cvfGeometryTools.cpp  cvfGeometryTools.h
resinsight/Fwk/AppFwk/CommonCode/: cafUtils.cpp  cafUtils.h  cvfCellRange.cpp  cvfCellRange.h  cvfStructGrid.cpp  cvfStructGrid.h  cvfStructGridGeometryGenerator.cpp  cvfStructGridGeometryGenerator.h  cvfStructGridScalarDataAccess.h
resinsight/Fwk/AppFwk/cafProjectDataModel/: cafFixedArray.h  cafPdmObject.h
resinsight/Fwk/VizFwk/LibCore/: cvfArray.h  cvfArray.inl  cvfBase.h  cvfBase64.cpp  cvfBase64.h  cvfCodeLocation.cpp  cvfCodeLocation.h  cvfCollection.h  cvfCollection.inl  cvfColor3.h  cvfColor4.h  cvfConfigCore.h  cvfDebugTimer.cpp  cvfDebugTimer.h  cvfFlags.h  cvfFlags.inl  cvfFunctorRange.h  cvfLibCore.h  cvfLogDestination.h  cvfLogEvent.cpp  cvfLogEvent.h  cvfLogger.cpp  cvfLogger.h  cvfMatrix4.h  cvfMatrix4.inl  cvfObject.cpp  cvfObject.h  cvfObject.inl  cvfQuat.h  cvfQuat.inl  cvfRect.h  cvfRect.inl  cvfString.cpp  cvfString.h  cvfSystem.cpp  cvfSystem.h  cvfTBBControl.cpp  cvfTBBControl.h  cvfTimer.cpp  cvfTimer.h  (+9 more)
resinsight/Fwk/VizFwk/LibGeometry/: cvfBoundingBox.cpp  cvfBoundingBox.h  cvfBoundingBoxTree.cpp  cvfBoundingBoxTree.h  cvfEdgeKey.cpp  cvfEdgeKey.h  cvfGeometryBuilder.cpp  cvfGeometryBuilder.h  cvfGeometryUtils.cpp  cvfGeometryUtils.h  cvfOutlineEdgeExtractor.cpp  cvfOutlineEdgeExtractor.h  cvfRay.cpp  cvfRay.h
resinsight/Fwk/VizFwk/LibRender/: cvfDrawable.cpp  cvfDrawable.h  cvfDrawableGeo.cpp  cvfDrawableGeo.h  cvfGeometryBuilderDrawableGeo.cpp  cvfGeometryBuilderDrawableGeo.h  cvfHitDetail.cpp  cvfHitDetail.h  cvfOpenGLTypes.h  cvfPrimitiveSet.cpp  cvfPrimitiveSet.h  cvfPrimitiveSetIndexedUInt.cpp  cvfPrimitiveSetIndexedUInt.h  cvfScalarMapper.cpp  cvfScalarMapper.h
resinxx/: geometry_tools.cpp  geometry_tools.h  well_path.cpp  well_path.h
resinxx/rixx_app_fwk/: cafAppEnum.h  cafHexGridIntersectionTools.cpp  cafHexGridIntersectionTools.h  cvfStructGrid.cpp  cvfStructGrid.h
resinxx/rixx_core_geom/: cvfArray.h  cvfAssert.h  cvfBoundingBox.cpp  cvfBoundingBox.h  cvfBoundingBoxTree.cpp  cvfBoundingBoxTree.h  cvfCollection.h  cvfCollection.inl  cvfRay.cpp  cvfString.h  cvfSystem.cpp  cvfSystem.h
resinxx/rixx_grid/: ricasedata.cpp  ricasedata.h  ricell.cpp  ricell.h  riextractor.h  rifaultncc.cpp  rifaultncc.h  rigrid.cpp  rigrid.h
resinxx/rixx_prj_mod/: RimIntersection.cpp  RimIntersection.h
resinxx/rixx_prj_viz/: RigFemPart.cpp  RimIntersection.cpp  RimIntersection.h  RivHexGridIntersectionTools.cpp  RivHexGridIntersectionTools.h  RivIntersectionGeometryGenerator.cpp  RivIntersectionGeometryGenerator.h  RivIntersectionPartMgr.cpp  RivIntersectionPartMgr.h  cvfDrawableGeo.cpp  cvfDrawableGeo.h
resinxx/rixx_res_mod/: RigCellGeometryTools.cpp  RigCellGeometryTools.h  cvfGeometryTools.cpp  cvfGeometryTools.h
tests/: test_intersected_cells.cpp  test_single_cell_wellindex.cpp  test_standalone_wicalc.cpp  wic_debug.hpp
tests/well_index_benchmark/: test_resource_wic_diff_functions.h  test_resource_wic_welldir.h  test_resource_wic_widata.h  test_well_index_deviated_well.cpp
tests/well_index_benchmark/wic-benchmark-wells/nw00_01/: EVENTS_nw00_01_RMS.DATA  nw00_01.xyz  nw_01.xyz
tests/well_index_benchmark/wic-benchmark-wells/nw00_02/: EVENTS_nw00_02_RMS.DATA  nw00_02.xyz  nw_02.xyz
tests/well_index_benchmark/wic-benchmark-wells/nw00_03/: EVENTS_nw00_03_RMS.DATA  nw00_03.xyz  nw_03.xyz
tests/well_index_benchmark/wic-benchmark-wells/nw00_04/: EVENTS_nw00_04_RMS.DATA  nw00_04.xyz  nw_04.xyz
tests/well_index_benchmark/wic-benchmark-wells/nw00_05/: EVENTS_nw00_05_RMS.DATA  nw00_05.xyz  nw_05.xyz
tests/well_index_benchmark/wic-benchmark-wells/nw00_06/: EVENTS_nw00_06_RMS.DATA  nw00_06.xyz  nw_06.xyz
tests/well_index_benchmark/wic-benchmark-wells/nw00_07/: EVENTS_nw00_07_RMS.DATA  nw00_07.xyz  nw_07.txt
tests/well_index_benchmark/wic-benchmark-wells/nw00_08/: EVENTS_nw00_08_RMS.DATA  nw00_08.xyz  nw_08.xyz
(+65 files in other folders)
